--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,15 @@
 
   /* slider header */
   .slider-header {
-    height: 80vh;
+    height: 90vh;
   }
 
+  .card-shadow-resume {
+    background: linear-gradient(180deg, #1e2125 0%, #222528 100%);
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
+      -10px 0px 35px rgba(194, 202, 213, 0.12);
+    border-radius: 12px;
+  }
   .card-shadow {
     background: linear-gradient(180deg, #1e2125 0%, #222528 100%);
     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
@@ -97,12 +103,71 @@
     transition-duration: 0.5s;
   }
 
+  /* what i do section */
+  .what-i-do-card:hover {
+    background: linear-gradient(180deg, #ffb600 1.79%, #ffb400 96.87%);
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
+      -10px 0px 35px rgba(194, 202, 213, 0.12);
+    border-radius: 12px;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+
+  .what-i-do-card:hover > * {
+    color: #fff;
+    stroke: #fff;
+  }
+
+  .what-i-do-card:hover circle {
+    stroke: white;
+  }
+  .what-i-do-card:hover span {
+    color: white;
+  }
+
+  .pro-skills:hover {
+    background: linear-gradient(180deg, #1e1f23 1.79%, #101114 96.87%);
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
+      -10px 0px 35px rgba(194, 202, 213, 0.12);
+    border-radius: 12px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+  }
+
+  /* box arrow in skills */
+
+  .box-arrow {
+    position: relative;
+    width: 40px;
+    height: 20;
+    border: 2px solid #ffb400;
+  }
+
+  .box-arrow::before {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #ffb400;
+  }
+
   .responsive-sidebar {
     width: 18%;
     /* transform: translateX(0%); */
   }
 
-  .outlet-screen {
+  /* expericance card in resume tabs section */
+  .experience:hover {
+    background: linear-gradient(180deg, #1e1f23 1.79%, #101114 96.87%);
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
+      -10px 0px 35px rgba(194, 202, 213, 0.12);
+    border-radius: 12px;
+  }
+
+  .experience:hover .outlet-screen {
     width: 82%;
     margin-left: 18%;
   }
@@ -116,7 +181,7 @@
       width: 50%;
       z-index: 5;
       transform: translateX(-100%);
-      transition-duration: 0.5s;
+      transition-duration: 0.3s;
     }
 
     .burger-menu {
