--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,11 @@
   /* sidebar */
 
   .responsive-sidebar {
-    background: linear-gradient(to bottom, rgba(16, 18, 20, 0.1), #101214),
+    background: linear-gradient(
+        rgb(55, 65, 81, 0.1),
+        rgb(0, 0, 0, 0.5),
+        #212428
+      ),
       url(/images/sidebar-bg.png);
     background-size: cover;
     background-position: center;
@@ -105,12 +109,12 @@
 
   /* what i do section */
   .what-i-do-card:hover {
-    background: linear-gradient(180deg, #ffb600 1.79%, #ffb400 96.87%);
+    background: linear-gradient(180deg, #1e1f23 1.79%, #101114 96.87%);
     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
       -10px 0px 35px rgba(194, 202, 213, 0.12);
     border-radius: 12px;
-    transition-duration: 0.3s;
     cursor: pointer;
+    transition-duration: 5s;
   }
 
   .what-i-do-card:hover > * {
@@ -119,10 +123,11 @@
   }
 
   .what-i-do-card:hover circle {
-    stroke: white;
+    fill: #ffb400;
+    stroke: "#FFB400";
   }
   .what-i-do-card:hover span {
-    color: white;
+    /* color: white; */
   }
 
   .pro-skills:hover {
@@ -160,6 +165,7 @@
   }
 
   /* expericance card in resume tabs section */
+
   .experience:hover {
     background: linear-gradient(180deg, #1e1f23 1.79%, #101114 96.87%);
     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
@@ -167,7 +173,15 @@
     border-radius: 12px;
   }
 
-  .experience:hover .outlet-screen {
+  .experience:hover > .yellow-blog {
+    display: block;
+  }
+
+  .yellow-blog {
+    display: none;
+  }
+
+  .outlet-screen {
     width: 82%;
     margin-left: 18%;
   }
@@ -195,8 +209,24 @@
     }
     .sidebar-image {
       height: 100vh;
-
-      /* background: red !important; */
+    }
+  }
+  @media only screen and (max-width: 1379px) {
+    .card-shadow-resume .custom-tab {
+      padding: 10px 40px;
+      font-size: 20px;
+    }
+  }
+  @media only screen and (max-width: 1172px) {
+    .card-shadow-resume .custom-tab {
+      padding: 10px 25px;
+      font-size: 15px;
+    }
+  }
+  @media only screen and (max-width: 880px) {
+    .card-shadow-resume .custom-tab {
+      padding: 10px 15px;
+      font-size: 15px;
     }
   }
 }
