--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,44 @@
     transition-duration: 0.3s;
   }
 
+  .portfolio-card-image {
+    position: relative;
+  }
+
+  .portfolio-card-image:before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 0%;
+    width: 100%;
+    bottom: 0;
+    transition: height 0.3s ease-out;
+    background: linear-gradient(rgb(255, 180, 0, 0.1), rgb(255, 180, 0, 1));
+    border-radius: 10px;
+  }
+  .portfolio-card-image:hover:before {
+    height: 100%;
+  }
+
   /* box arrow in skills */
+
+  /* custom scrollbar */
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px black;
+    border-radius: 4px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #ffb400;
+    border-radius: 5px;
+  }
 
   .box-arrow {
     position: relative;
