--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   body {
     font-family: "Roboto", sans-serif;
@@ -247,27 +251,87 @@
     object-fit: fill;
   }
 
-  /* .gallery {
-    display: grid;
-    gap: 20px;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
+  /* myblog section */
+  /* .blog-card-image {
+    position: relative;
   }
 
-  .gallery-box-one {
-    grid-row: auto;
-  }
+ 
 
-  .gallery-box-two {
-    grid-column-start: auto;
-    grid-column-end: auto;
+  .blog-card-image:before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 0%;
     width: 100%;
+    bottom: 0;
+    transition: height 0.3s ease-out;
+    background: linear-gradient(
+      to bottom,
+      rgb(254, 240, 138, 0),
+      rgb(253, 224, 71, 0.08),
+      rgb(250, 204, 21, 0.8)
+    );
+    border-radius: 10px;
+  }
+  .blog-card-image:hover:before {
+    height: 100%;
+  } */
+
+  .blog-card-image {
+    position: relative;
+    transition-duration: 0.3s;
   }
 
-  .gallery img {
+  .blog-card-image:before {
+    content: "";
+    display: block;
+    position: absolute;
     height: 100%;
-    object-fit: fill;
-  } */
+    width: 100%;
+    bottom: 0;
+    transition: height 0.3s ease-out;
+    background: linear-gradient(
+      rgb(55, 65, 81, 0.3),
+      rgb(17, 24, 39, 0.4),
+      rgb(0, 0, 0)
+    );
+    opacity: 0.7;
+    border-radius: 10px;
+  }
+
+  .blog-card-image:hover:before {
+    background: linear-gradient(
+      to bottom,
+      rgb(254, 240, 138, 0),
+      rgb(253, 224, 71, 0.08),
+      rgb(250, 204, 21, 0.8)
+    );
+    transition: height 0.3s ease-out;
+  }
+  .blog-card-image:hover .read-more {
+    color: #fff;
+  }
+
+  .blog-card-image:hover .read-more-arrow path {
+    stroke: #fff;
+  }
+
+  .card-shadow-contact {
+    background: linear-gradient(180deg, #1e2125 0%, #222528 100%);
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
+      -10px 0px 35px rgba(194, 202, 213, 0.12);
+  }
+
+  .contact-form {
+    background: linear-gradient(180deg, #1e1f23 1.79%, #101114 96.87%);
+  }
+
+  .contact-form input {
+    background: #23272c;
+
+    border-radius: 8px;
+  }
 
   .outlet-screen {
     width: 82%;
