--- a/src/index.css
+++ b/src/index.css
@@ -361,7 +361,13 @@ html {
       z-index: 5;
       transform: translateX(-100%);
       transition-duration: 0.3s;
-      opacity: 1;
+
+      background: linear-gradient(
+          rgb(55, 65, 81, 0.3),
+          rgb(0, 0, 0, 0.9),
+          #212428
+        ),
+        url(/images/sidebar-bg.png);
     }
 
     .burger-menu {
