--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,19 @@ html {
     border-radius: 8px;
   }
 
+  /* why choose me section */
+
+  .why-me-image {
+    opacity: 0.6;
+    object-fit: cover;
+  }
+
+  .choose-me-block {
+    background: linear-gradient(180deg, #1e2125 0%, #222528 100%);
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.45),
+      -10px 0px 35px rgba(194, 202, 213, 0.12);
+  }
+
   .outlet-screen {
     width: 82%;
     margin-left: 18%;
