--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 @layer base {
   body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
     color: #a9b2bf;
     background-color: #212428;
     overflow-x: hidden;
@@ -65,17 +65,50 @@ body {
 
   /* sidebar */
 
-  .responsive-sidebar {
+  /* .responsive-sidebar {
     background: linear-gradient(
         rgb(55, 65, 81, 0.1),
-        rgb(0, 0, 0, 0.5),
+        rgb(0, 0, 0, 0.3),
         #212428
       ),
       url(/images/sidebar-bg.png);
-    background-size: cover;
-    background-position: center;
+    background-size: contain;
+    background-position: top;
     background-repeat: no-repeat;
     height: 100vh;
+  } */
+
+  .responsive-sidebar {
+    position: relative;
+    height: 100vh;
+  }
+
+  .responsive-sidebar::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      /* Adjust the opacity to make it darker or lighter */ rgba(0, 0, 0, 0.5)
+    );
+    z-index: -1;
+  }
+
+  .responsive-sidebar::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(/images/sidebar-bg.png);
+    background-size: contain;
+    background-position: top;
+    background-repeat: no-repeat;
+    z-index: -2;
   }
 
   .side-link:hover * {
@@ -359,11 +392,7 @@ body {
       transform: translateX(-100%);
       transition-duration: 0.3s;
 
-      background: linear-gradient(
-          rgb(55, 65, 81, 0.5),
-          rgb(0, 0, 0, 0.9),
-          #212428
-        ),
+      background: linear-gradient(rgb(55, 65, 81, 1), rgb(0, 0, 0, 1), #212428),
         url(/images/sidebar-bg.png);
     }
 
